[package]
name = "webcraft"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.11.6"
log = "0.4.26"
pollster = "0.4.0"
wgpu = "24.0.1"
winit = { version = "0.29", features = ["rwh_05"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }